Commented out "old" messages which apparently is not longer used
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1305 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -1,21 +1,21 @@
 # Form labels
-label.footer=&copy; EMBL EBI
-label.username=Account
+# label.footer=&copy; EMBL EBI
+# label.username=Account
 label.password=Password
 label.passwordRep=Password (repeated)
-label.rememberme=Remember me
+# label.rememberme=Remember me
 label.login=Login
 label.submit=Submit
-label.search=search
-label.searchMetabolights=Search MetaboLights
+# label.search=search
+# label.searchMetabolights=Search MetaboLights
 label.file=File
 label.isatabZipFile=Choose ISATAB archive file
-label.filename=File name
+# label.filename=File name
 label.upload=Upload
-label.experimentstatuspublic=Make it public now?
+# label.experimentstatuspublic=Make it public now?
 label.experimentMsgPublic=Please pick a date for when your study will be public, today or in the future
 label.email=Email address
-label.remind=Remind me
+# label.remind=Remind me
 label.resetPw=Reset password
 label.oopsForgot=Forgot your password?
 label.userName=Email Address 
@@ -31,31 +31,31 @@ label.create=Create
 label.cancel=Cancel
 label.update=Update
 label.releaseDate=Study Public Release Date
-label.pickReleaseDate=Public Date
+# label.pickReleaseDate=Public Date
 label.subDate=Study Submission Date
 label.expFact=Study Factors
 label.expId=Study identifier
 label.subm=Submitted by
 label.expPrivate=Private study
 label.assays=Assays
-label.pubBy=Publication by 
-label.pubIn=See publication
-label.metaboLightsEntry=MetaboLights Entry
+# label.pubBy=Publication by
+# label.pubIn=See publication
+# label.metaboLightsEntry=MetaboLights Entry
 label.title=Title
 label.organism=Organism
 label.technology=Technology
 label.metabolite=Metabolite
-label.platforms=Platform
+# label.platforms=Platform
 label.status=Privacy
 label.description=Description
 label.design=Design(s)
-label.properties=Propertie(s)
-label.sampleAttr=Sample Attribute(s)
+# label.properties=Propertie(s)
+# label.sampleAttr=Sample Attribute(s)
 label.contact=Contact us
 label.message=Message to the MetaboLights team
-label.aboutMetab=About MetaboLights
+# label.aboutMetab=About MetaboLights
 label.ftpDownload=Download: Experiment
-label.ftp=Files
+# label.ftp=Files
 label.searchFilter=Filter your results
 label.publicDate=Select the public release date
 label.makestudypublic=Update release date
@@ -194,20 +194,20 @@ msg.notindexed=You must be logged in as a curator to reindex.
 msg.showing=showing
 msg.to=to 
 msg.emailSent=Message Sent
-msg.emailContactUsFrom=Message from MetaboLights website
+# msg.emailContactUsFrom=Message from MetaboLights website
 msg.emailContactUsTo=Message to the MetaboLights team
 msg.welcomeWithStudies=Hi {0}, you have {1} studie(s).
 msg.welcomeWithoutStudies=Hi {0}! You''ve not submitted any studies yet.
-msg.submitted=You've submitted
+# msg.submitted=You've submitted
 msg.studies=studies
 msg.makestudypublic.title=Update {0} study public release date. {1}
 msg.makestudypublic.msg=This will update the public release date of the study. If you decide to make it public, you will allow the MetaboLights community to view it or even download it. 
-msg.makestudypublic.ok.title=Public release date updated
-msg.makestudypublic.ok.msg= Your study's public release date has been updated.
+# msg.makestudypublic.ok.title=Public release date updated
+# msg.makestudypublic.ok.msg= Your study's public release date has been updated.
 msg.updatestudy.title=Update study ({0}): {1}
 msg.updatestudy.msg=Thanks for updating your study! We currently do not provide an online update facility. You will need to use the <a href="http://www.isa-tools.org/">ISAcreator</a> software suite to update your study. You can download your study on the download button provided and load it into your ISACreator. We have created a <a href="help">step-by-step guide</a> to help you.
-msg.updatestudy.ok.title=Study {0} updated.
-msg.updatestudy.ok.msg=Congratulations\! You have updated the study {0}. 
+# msg.updatestudy.ok.title=Study {0} updated.
+# msg.updatestudy.ok.msg=Congratulations\! You have updated the study {0}.
 msg.makestudypublic.nofilefound=The IsaTab zip file for the study {0} can not be found. Please contact the MetaboLights team.
 msg.makestudypublic.daterequired=The Public Release Date is a required field.
 msg.validation.studynotowned=You are not the owner of the study.
@@ -215,8 +215,8 @@ msg.validation.publicstudynoteditable=A public study can not be modified.
 msg.validation.studyIdDoNotMatch=The file you are uploading has a wrong Study Identifier. The new file study identifier is {0} and you are trying to update the study {1}. Both have to match.
 msg.validation.backupFileExists=There is already a backup file for the study {0}. The process can not continue. Please contact MetaboLights team this is a technical problem.
 msg.validation.invalid=The file has not passed the MetaboLights validation. Please try to validate your file against our MetaboLights IsaTab Configuration file.
-msg.studytogopublic=Great news\! Your study {0} is about be publicly available on the {1}. \n\n We are eagerly waiting for your study to become public, but if you need more time to edit this study, please log in to MetaboLights and change the "Study Public Release Date". \nYou can find your private studies here http\://www.ebi.ac.uk/metabolights/mysubmissions\n\n Kind Regards, the MetaboLights team.
-msg.studynowpublic=Great news! Your study {0} is now public.  Please see your excellent work in all it's glory here: {1}{0}
+# msg.studytogopublic=Great news\! Your study {0} is about be publicly available on the {1}. \n\n We are sure lots of people are looking forward to seeing your study, but if you need more time to edit this study, please log in to MetaboLights and change the "Study Public Release Date". \nYou can find your private studies here http\://www.ebi.ac.uk/metabolights/mysubmissions\n\n Kind Regards, the MetaboLights team.
+# msg.studynowpublic=Great news! Your study {0} is now public.  Please see your excellent work in all it's glory here: {1}{0}
 msg.studyQueueSuccesfully= Thank you\! <br/><br/>You have successfully uploaded your study to our submission queue.\n\n<br/>You will receive further emails when your study is validated, processed and made available online.
 msg.PRDUpdateQueued=Your request has been successfully received and is now waiting to be processed.\n\nYou will receive and email when the updating proccess is finished.\n\nThank you\!.
 msg.deleteStudy.userValidation=You are logged in as {0} and the owner of {1} is {2}. Only {2} can delete {1}.\n
@@ -235,20 +235,20 @@ msg.trainOnline=A quick introduction to MetaboLights is also available on  <a hr
 
 
 # Ebeye-client messages
-ebeye.msg.domain=List of domains. Total 
-ebeye.msg.fields=List of Fields. Total 
-ebeye.msg.entries=List of entries. Total 
+# ebeye.msg.domain=List of domains. Total
+# ebeye.msg.fields=List of Fields. Total
+# ebeye.msg.entries=List of entries. Total
 ebeye.msg.query=Query for entries and domains below:
-ebeye.msg.showing=showing 
+# ebeye.msg.showing=showing
 
 # Reference Layer Messages
-ref.msg.doamin=Please specify the domain, \'chebi\' or \'metabolights\'.
-ref.msg.iupac=Name:
-ref.msg.chebi.name=CHEBI:
+# ref.msg.doamin=Please specify the domain, \'chebi\' or \'metabolights\'.
+# ref.msg.iupac=Name:
+# ref.msg.chebi.name=CHEBI:
 ref.msg.chebi.url=http://www.ebi.ac.uk/chebi/advancedSearchFT.do?searchString=
 ref.msg.mtbl.studies=Studies:
-ref.msg.mtbls.url=http://www.ebi.ac.uk/metabolights/search?freeTextQuery=
-ref.msg.chebi.image.url=http://www.ebi.ac.uk/chebi/displayImage.do?defaultImage=true&imageIndex=0&chebiId=
+# ref.msg.mtbls.url=http://www.ebi.ac.uk/metabolights/search?freeTextQuery=
+# ref.msg.chebi.image.url=http://www.ebi.ac.uk/chebi/displayImage.do?defaultImage=true&imageIndex=0&chebiId=
 ref.msg.technology=Technology
 ref.msg.organism=Organism
 ref.msg.searchResult=results found for 
@@ -256,7 +256,7 @@ ref.msg.noResult=No results were found for your query.
 ref.msg.noResultSearch=You can search for a wide range of metabolites. Examples:
 ref.msg.emptyBrowse=results found
 ref.msg.filterResults=Filter your results
-ref.msg.Navigate=Navigate:
+# ref.msg.Navigate=Navigate:
 ref.msg.JumpTo=Jump to:
 ref.msg.CitationTitle=Title
 ref.msg.CitationAuthors=Authors
