Reaction tab now will show Rhea Id. Bug fixes, code cleanup.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1311 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -263,6 +263,8 @@ ref.msg.CitationTitle=Title
 ref.msg.CitationAuthors=Authors
 ref.msg.CitationPubMed=PubMed
 ref.msg.CitationAbstract=Abstract
+ref.msg.noReactions=No Reactions found for this compound.
+ref.msg.noLiterature=No Literature found for this compound in Europe PubMed Central
 
 
 ref.compound.synonyms=Synonyms
