After user registration, s/he will be prompted to verify email, shown as a message.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1314 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -165,8 +165,11 @@ msg.updateAccount=These are your account details. You can make changes to the cu
 msg.accountInactive=This account is not active (yet). It needs to be activated by the MetaboLights team.
 msg.starRequired=(*) indicates required field
 msg.mainPage=Back to the main page.
-msg.feedbackAccountRequestedHeader=New account created
+msg.feedbackAccountRequestedHeader=Thanks. Please verify your email.
 msg.feedbackAccountRequestedDetails=Your account details
+msg.step1.accountDetails=<b>Step 1: Check your email and click on the verification link.</b>
+msg.step2.accountDetails=<b>Step 2: After your have verified your email, the MetaboLights team will activate your account within one working day.</b>
+msg.contactUsAndRegards=<BR>In the meantime if you have any questions, <a href="contact">please contact us</a>.<BR><BR>Kind regards,<BR>The MetaboLights Team
 msg.feedbackAccountRequestedBody=Thank you, your account has been provisionally created but still needs to be <b>verified</b>.<BR><BR>You have been sent an email to confirm your request for a new account.<BR><BR>After your confirmation, the <b>MetaboLights team will review the account request</b> and activate your account within one working day.<BR><BR>As soon as your account is activated you will be notified by email. You can then use your account to log in and submit data.<BR>In the meantime if you have any questions, <a href="contact">please contact us</a>.<BR><BR>Kind regards,<BR>The MetaboLights Team
 msg.confirmAccountRequest=\n\nThrough our MetaboLights website (http\://www.ebi.ac.uk/metabolights) we have received a request to create a new account linked to this email address.\n\nPlease click this link to confirm that you have indeed requested this.\n\nThe MetaboLights team will then activate the account within one working day. You will receive an email message notifying you when it is active.  \n\nConfirm\: {0}
 msg.accountRequest=\n\nA new user ({0} {1}) has requested "{2}" to be used for MetaboLights.\nPlease review the user request, and activate the account. \n\nName        \: {0} {1}\nUser id     \: {3} \nEmail       \: {4} \nAffiliation \: {5} \nAff. URL    \: {6}  \nCountry     \: {7}\n\nYou can activate this account (and automatically notify the user) by clicking this link\:\n{8} 
@@ -232,7 +235,7 @@ msg.useroptionscurator=As a curator, you may also want to ...
 msg.fetchingData=Fetching data...
 msg.T&CAcceptance=I understand that all public data is freely available by any individual and for any purpose.
 msg.T&Cinvalid=You must accept EBI terms and conditions.
-msg.trainOnline=A quick introduction to MetaboLights is also available on  <a href="http://www.ebi.ac.uk/training/online/course/metabolights-quick-tour/what-metabolights">EBI Train Online</a>&nbsp;<span class="icon icon-generic" data-icon="T"/>
+msg.trainOnline=A quick introduction to MetaboLights is also available on  <a href="http://www.ebi.ac.uk/training/online/course/metabolights-quick-tour/what-metabolights">EBI Train Online</a>&nbsp;<a href="http://www.ebi.ac.uk/training/online/course/metabolights-quick-tour/what-metabolights"><span class="icon icon-generic" data-icon="T"/></a>
 
 
 # Ebeye-client messages
