Added link to the global EBI contact and feedback form
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1315 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -79,6 +79,7 @@ label.metabolites.identifier=Identifier
 label.metabolites.description=Description
 label.metabolites.formula=Formula
 label.sourceforge=Please use our <a href="http://sourceforge.net/tracker/?group_id=504460/">problem tracker</a> if you have found a bug or have any suggestions for enhanced or new functionality
+label.ebiContact=You can also contact us using the global <a href="http://www.ebi.ac.uk/support/metabolights">EBI Support & Feedback form</a>
 label.stats=Statistics
 label.paramHeader=MetaboLights Parameters
 label.paramName=Parameter Name
