Clear cache feature added to configuration option.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1320 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -269,6 +269,7 @@ ref.msg.CitationPubMed=PubMed
 ref.msg.CitationAbstract=Abstract
 ref.msg.noReactions=No Reactions found for this compound.
 ref.msg.noLiterature=No Literature found for this compound in Europe PubMed Central
+ref.msg.clearRefCache=The reference layer cache has been cleared!!
 
 
 ref.compound.synonyms=Synonyms
