Added cosmos info to the about page. Bug fixes.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1326 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -237,7 +237,7 @@ msg.fetchingData=Fetching data...
 msg.T&CAcceptance=I understand that all public data is freely available by any individual and for any purpose.
 msg.T&Cinvalid=You must accept EBI terms and conditions.
 msg.trainOnline=A quick introduction to MetaboLights is also available on  <a href="http://www.ebi.ac.uk/training/online/course/metabolights-quick-tour/what-metabolights">EBI Train Online</a>&nbsp;<a href="http://www.ebi.ac.uk/training/online/course/metabolights-quick-tour/what-metabolights"><span class="icon icon-generic" data-icon="T"/></a>
-
+msg.about.cosmos=Coordinated by <a href="http://www.ebi.ac.uk/about/people/christoph-steinbeck/">Dr Christoph Steinbeck</a> of the EMBL-European Bioinformatics Institute, COSMOS (Coordination of Standards in Metabolomics) will bring together European data providers to set and promote community standards that will make it easier to disseminate metabolomics data through life science e-infrastructures. This Coordination Action has been financed with 2 million euros by the European Commission's Seventh Framework Programme.
 
 # Ebeye-client messages
 # ebeye.msg.domain=List of domains. Total
@@ -277,7 +277,7 @@ ref.compound.tab.characteristics=Characteristics
 ref.compound.tab.chemistry=Chemistry
 ref.compound.tab.characteristics.definition=Definition
 ref.compound.tab.characteristics.chemicalproperties=Chemical properties
-ref.compound.tab.characteristics.formulae=Chemical formulae
+ref.compound.tab.characteristics.formula=Chemical formula
 ref.compound.tab.foundin=Source
 ref.compound.tab.biology=Biology
 ref.compound.tab.pathways=Pathways
