--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -131,12 +131,13 @@ msg.metabolightsAbout13=If you want a local copy of the MetaboLights repository,
 msg.metabolightsAbout14=Help topics
 msg.metabolightsAbout15=<p>For submission to <strong>MetaboLights</strong>, we require submissions to be in the ISA-Tab format. This format can be created and edited using a variety of spreadsheet tools.</p><p>We recommend two tools in particular for creation of ISA-Tab files and subsequent submission to our repository:</p><ul><li>ISAcreator: a standalone desktop application with a multitude of facilities to enable standards-compliant creation of ISA-Tab. More information is available from http://isa-tools.org; and</li><li>Google Spreadsheets with OntoMaton: OntoMaton is an add-on to Google Spreadsheets enabling ontology search and tagging within the collaborative Google Spreadsheet environment.</li></ul><br/><p>A Google Doc template for MetaboLights submissions will be coming soon</a>.</p><p>OntoMaton is developed and maintained by the <a href="http://isa-tools.org" target="_blank">ISA team</a>. You can find out more about <strong>OntoMaton</strong> from the project page <a href="http://github.com/ISA-tools/OntoMaton" target="_blank">http://github.com/ISA-tools/OntoMaton</a>. </p>
 
+msg.welcome=welcome
 msg.backToMainPage=Back to the main page
 msg.backToSubmitPage=Try submission again?
 msg.invalidSessionHeader=Invalid session
 msg.invalidSessionMsg=Your session appears to have timed out.
 msg.loggedOutHeader=Logged Out
-msg.loggedOutMsg=You have been logged out. 
+msg.loggedOutMsg=You have been logged out.
 msg.reqFieldMissing=Required field(s) are missing.
 msg.incorrUserPw=Incorrect user name and/or password.
 msg.loggedIn=You have successfully logged in.
@@ -328,7 +329,7 @@ BIISubmit.fileUploadComplete=File upload complete for
 mail.noreplyaddress=no-reply@ebi.ac.uk
 mail.queuedStudy.subject=Thank you! Your study {0} is now waiting to be processed.
 mail.queuedStudy.body=Hi {0}\n\nWe have received your submission, you uploaded the file {1}. \n\nPlease be patient whilst your submission is validated, processed and made available online.\nWe will send you another email with the results of our validation and processing.\n\nMany thanks for submitting your data to MetaboLights.\n\nMetaboLights Team\n\nTechnical info\:\nFile size\: {2} \nTo be public on\: {3}\nServer name\: {4}\nSubmitted: {5}.
-mail.submittedStudy.subject=Congratulations\! Your study {0} is been successfully processed\!
+mail.submittedStudy.subject=Congratulations\! Your study {0} has been successfully processed\!
 mail.submittedStudy.body=We are happy to inform you that your submitted study ({0}) has been successfully processed. \n\nYour study is now identified in MetaboLights as {1}. \n\nThe public release date is {2}.\n\nMany thanks for your time and effort. You can access your study here\: {3}{1}.
 mail.errorInStudy.subject=We can not process {0}
 mail.errorInStudy.body=There was a problem with your submitted study ({0}).\n\n{1}\nThe MetaboLights team has been made aware of the problem. Please, do not hesitate to contact us for help, we are happy to help as we know it can be difficult.\n\nTechnical info\:\nFile\:{0}\nError\:{2}.
