'Show more data from EMBL-EBI' widget was not working. Fixed it. Minor tweaks.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1330 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -131,7 +131,7 @@ msg.metabolightsAbout13=If you want a local copy of the MetaboLights repository,
 msg.metabolightsAbout14=Help topics
 msg.metabolightsAbout15=<p>For submission to <strong>MetaboLights</strong>, we require submissions to be in the ISA-Tab format. This format can be created and edited using a variety of spreadsheet tools.</p><p>We recommend two tools in particular for creation of ISA-Tab files and subsequent submission to our repository:</p><ul><li>ISAcreator: a standalone desktop application with a multitude of facilities to enable standards-compliant creation of ISA-Tab. More information is available from http://isa-tools.org; and</li><li>Google Spreadsheets with OntoMaton: OntoMaton is an add-on to Google Spreadsheets enabling ontology search and tagging within the collaborative Google Spreadsheet environment.</li></ul><br/><p>A Google Doc template for MetaboLights submissions will be coming soon</a>.</p><p>OntoMaton is developed and maintained by the <a href="http://isa-tools.org" target="_blank">ISA team</a>. You can find out more about <strong>OntoMaton</strong> from the project page <a href="http://github.com/ISA-tools/OntoMaton" target="_blank">http://github.com/ISA-tools/OntoMaton</a>. </p>
 
-msg.welcome=welcome
+msg.welcome=Welcome 
 msg.backToMainPage=Back to the main page
 msg.backToSubmitPage=Try submission again?
 msg.invalidSessionHeader=Invalid session
