URLs to submission guide V 2.0 updated in JSPs.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1335 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -122,10 +122,10 @@ msg.metabolightsAbout4=MetaboLights semantic quality will be based on various co
 msg.metabolightsAbout5=The development of MetaboLights is funded by the BBSRC, grant reference <a href="http://www.bbsrc.ac.uk/pa/grants/AwardDetails.aspx?FundingReference=BB/I000933/1">BB/I000933/1</a>.<br/>The funding is for a project that will instantiate, at the European Bioinformatics Institute (EBI) in Hinxton, Cambridge, UK, the MetaboLights metabolomics database with various different components focused on both data standards and primary experimental data. MetaboLights is cross-species, cross-application and will cover all relevant analytical methods.<br/><br/>MetaboLights is a joint development between the <a href="http://www.ebi.ac.uk/steinbeck/">Steinbeck group</a> at the European Bioinformatics Institute and the <a href="http://www.metabolomics.bioc.cam.ac.uk/metabolomics/">Griffin group</a> in Cambridge.
 msg.metabolightsAbout6=MetaboLights submissions are powered by the <a href="http://www.isa-tools.org/">ISA software suite.</a> so experimental data gets submitted in <a href="http://www.isa-tools.org/">ISA-Tab</a> format. The Investigation/Study/Assay (ISA) infrastructure is the first general-purpose format and freely available desktop software suite targeted to experimentalists, curators and developers and that assists in the reporting and local management of experimental metadata (i.e. sample characteristics, technology and measurement types, sample-to-data relationships) from studies employing one or a combination of technologies.
 msg.metabolightsAbout7=<b>Experiments</b>. All public MetaboLights experiments can be downloaded from our public <a href\="ftp\://ftp.ebi.ac.uk/pub/databases/metabolights/studies/public/">ftp archive</a>.  Please find zip archives under the "studies" folder. Each public study can be found in the corresponding MTBLS-id zip-archive. Complete experiments can be opened with <a href\="https\://github.com/downloads/ISA-tools/ISAcreator/ISAcreator-1.6.zip">ISAcreator</a> or you can extract the archives using your normal unzip program.
-msg.metabolightsAbout8=Please take a look at our comprehensive submissions <a href="https://docs.google.com/document/d/1uL97eA5rozKHyXUbngQJNy-iwQXic7GMVK8bAQSWaCU/view">guide</a> in Google docs. You can also take a look at the <a href="http://www.youtube.com/user/isatools/featured?gl=GB">isatools</a> YouTube channel for a general introduction to ISAcreator.
+msg.metabolightsAbout8=Please take a look at our comprehensive submissions <a href="https://docs.google.com/document/d/1kvBdnleInVr1UMyV-sm91w2uK_IfkU11Rx-uxvILOFU/view">guide</a> in Google docs. You can also take a look at the <a href="http://www.youtube.com/user/isatools/featured?gl=GB">isatools</a> YouTube channel for a general introduction to ISAcreator.
 msg.metabolightsAbout9=The latest version of the metabolite identification plugin for ISAcreator can be downloaded <a href\="ftp\://ftp.ebi.ac.uk/pub/databases/metabolights/submissionTool/plugin/">here</a>.  \nPlease remember to place this in the "/Plugins" folder in your local ISAcreator installation.
 msg.metabolightsAbout10=The MetaboLights project is a member of <a href="http://www.isacommons.org/">isacommons</a>, the ISA community.
-msg.metabolightsAbout11=We accept submissions in ISA-tab format. Please take a look at our comprehensive submissions <a href="https://docs.google.com/document/d/1uL97eA5rozKHyXUbngQJNy-iwQXic7GMVK8bAQSWaCU/view">guide</a> in Google docs. Alternatively <a href="contact">please contact us</a> us if you like to submit new studies.
+msg.metabolightsAbout11=We accept submissions in ISA-tab format. Please take a look at our comprehensive submissions <a href="https://docs.google.com/document/d/1kvBdnleInVr1UMyV-sm91w2uK_IfkU11Rx-uxvILOFU/view">guide</a> in Google docs. Alternatively <a href="contact">please contact us</a> us if you like to submit new studies.
 msg.metabolightsAbout12=<b>pre-packaged ISAcreator download</b>. To make it easy for new users, please download our pre-packaged ISAcreator with plugin and configurations <a href\="ftp\://ftp.ebi.ac.uk/pub/databases/metabolights/submissionTool/ISAcreatorMetaboLights.zip">here</a>.
 msg.metabolightsAbout13=If you want a local copy of the MetaboLights repository, please download and install MetaboLights from <a href="http://sourceforge.net/projects/metabolomes/">here</a>.  To populate your local MetaboLights database, you simply upload experiments (Studies) of interest.
 msg.metabolightsAbout14=Help topics
@@ -347,15 +347,17 @@ url.isatools=http://www.isa-tools.org/
 url.EBIheaderTop=/inc/head.html
 url.EBIheaderFoot=/inc/foot.html
 
-help.url.setup=<a href=https://docs.google.com/document/d/1uL97eA5rozKHyXUbngQJNy-iwQXic7GMVK8bAQSWaCU/view#heading=h.47opvsht6337>General&nbsp;Setup</a>
-help.url.isasetup=<a href=https://docs.google.com/document/d/1uL97eA5rozKHyXUbngQJNy-iwQXic7GMVK8bAQSWaCU/view#heading=h.bavk5qlhju2y>Download&nbsp;and&nbsp;setup&nbsp;ISAcreator</a>
-help.url.describe=<a href=https://docs.google.com/document/d/1uL97eA5rozKHyXUbngQJNy-iwQXic7GMVK8bAQSWaCU/view#heading=h.99iahx65tuns>Describe&nbsp;your&nbsp;Experiment</a>
-help.url.study=<a href=https://docs.google.com/document/d/1uL97eA5rozKHyXUbngQJNy-iwQXic7GMVK8bAQSWaCU/view#heading=h.y44r29qtd8c2>Create&nbsp;a&nbsp;Study</a>
-help.url.sample=<a href=https://docs.google.com/document/d/1uL97eA5rozKHyXUbngQJNy-iwQXic7GMVK8bAQSWaCU/view#heading=h.qkw812eqaxcs>Sample&nbsp;Information</a>
-help.url.assay=<a href=https://docs.google.com/document/d/1uL97eA5rozKHyXUbngQJNy-iwQXic7GMVK8bAQSWaCU/view#heading=h.nm6jwnlj1qx4>Assay&nbsp;Information</a>
-help.url.archive=<a href=https://docs.google.com/document/d/1uL97eA5rozKHyXUbngQJNy-iwQXic7GMVK8bAQSWaCU/view#heading=h.7ijudzjok4cv>Archive&nbsp;your&nbsp;experiment</a>
-help.url.account=<a href=https://docs.google.com/document/d/1uL97eA5rozKHyXUbngQJNy-iwQXic7GMVK8bAQSWaCU/view#heading=h.dkh028xtezex>Create&nbsp;a&nbsp;MetaboLights&nbsp;user&nbsp;account</a>
-help.url.submit=<a href=https://docs.google.com/document/d/1uL97eA5rozKHyXUbngQJNy-iwQXic7GMVK8bAQSWaCU/view#heading=h.9jliam4ei6tf>Submit&nbsp;you&nbsp;study&nbsp;to&nbsp;MetaboLights</a>
+help.url.guide=<a href=https://docs.google.com/document/d/1kvBdnleInVr1UMyV-sm91w2uK_IfkU11Rx-uxvILOFU/view
+help.url.baseUrl=<a href=https://docs.google.com/document/d/1kvBdnleInVr1UMyV-sm91w2uK_IfkU11Rx-uxvILOFU/view#heading=
+help.url.setup=h.2s8eyo1>General&nbsp;Setup</a>
+help.url.isasetup=h.17dp8vu>Download&nbsp;and&nbsp;setup&nbsp;ISAcreator</a>
+help.url.describe=h.3rdcrjn>Describe&nbsp;your&nbsp;Experiment</a>
+help.url.study=h.2bn6wsx>Create&nbsp;a&nbsp;Study</a>
+help.url.sample=h.vx1227>Sample&nbsp;Information</a>
+help.url.assay=h.2u6wntf>Assay&nbsp;Information</a>
+help.url.archive=h.26in1rg>Archive&nbsp;your&nbsp;experiment</a>
+help.url.account=h.2zbgiuw>Create&nbsp;a&nbsp;MetaboLights&nbsp;user&nbsp;account</a>
+help.url.submit=h.1egqt2p>Submit&nbsp;you&nbsp;study&nbsp;to&nbsp;MetaboLights</a>
 label.metabolites.smiles=Smiles
 label.metabolites.inchi=Inchi
 label.metabolites.multiplicity=Multiplicity
