Added the metabolights parameters, with add edit and delete options. Make study public from study details page.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1343 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -240,6 +240,12 @@ msg.T&Cinvalid=You must accept EBI terms and conditions.
 msg.trainOnline=A quick introduction to MetaboLights is also available on  <a href="http://www.ebi.ac.uk/training/online/course/metabolights-quick-tour/what-metabolights">EBI Train Online</a>&nbsp;<a href="http://www.ebi.ac.uk/training/online/course/metabolights-quick-tour/what-metabolights"><span class="icon icon-generic" data-icon="T"/></a>
 msg.about.cosmos=Coordinated by <a href="http://www.ebi.ac.uk/about/people/christoph-steinbeck/">Dr Christoph Steinbeck</a> of the EMBL-European Bioinformatics Institute, COSMOS (Coordination of Standards in Metabolomics) will bring together European data providers to set and promote community standards that will make it easier to disseminate metabolomics data through life science e-infrastructures. This Coordination Action has been financed with 2 million euros by the European Commission's Seventh Framework Programme.
 
+metaboLights.parameters=MetaboLights Parameters
+metaboLights.parameters.name=Parameter name
+metaboLights.parameters.value=Parameter value
+metaboLights.parameters.add=Add parameters
+metaboLights.parameters.delete=Delete this parameter
+
 # Ebeye-client messages
 # ebeye.msg.domain=List of domains. Total
 # ebeye.msg.fields=List of Fields. Total
