--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -101,6 +101,7 @@ menu.myStudiesCap=My Studies
 menu.myAccount=my account
 menu.myAccountCaps=My Account
 menu.logout=log out
+menu.logoutCaps=Log Out
 menu.loggedInAs=Logged in as
 menu.contact=contact
 menu.submitHelp=How to submit data to MetaboLights
@@ -108,7 +109,9 @@ menu.download=download
 menu.downloadHelp=Download data from MetaboLights
 menu.downloadplugin=Download latest metabolite identification plugin
 menu.config=configuration
+menu.configCaps=Configuration
 menu.users=users
+menu.usersCaps=Users
 menu.Ebeye=Ebeye-Help
 menu.parameters=parameters
 
@@ -337,7 +340,7 @@ mail.queuedStudy.body=Hi {0}\n\nWe have received your submission, you uploaded t
 mail.submittedStudy.subject=Congratulations\! Your study {0} has been successfully processed\!
 mail.submittedStudy.body=We are happy to inform you that your submitted study ({0}) has been successfully processed. \n\nYour study is now identified in MetaboLights as {1}. \n\nThe public release date is {2}.\n\nMany thanks for your time and effort. You can access your study here\: {3}{1}.
 mail.errorInStudy.subject=We can not process {0}
-mail.errorInStudy.body=There was a problem with your submitted study ({0}).\n\n{1}\nThe MetaboLights team has been made aware of the problem. Please, do not hesitate to contact us for help, we are happy to help as we know it can be difficult.\n\nTechnical info\:\nFile\:{0}\nError\:{2}.
+mail.errorInStudy.body=There was a problem with your submitted study ({0}).\n\n{1}\nThe MetaboLights team has been made aware of the problem. Please, do not hesitate to contact us for help, we are happy to help as we know it can be difficult.\n\nTechnical info\:\nFile\:{0}\nError\:{3}\nServer Name:{2}
 mail.updateStudy.subject=Study {0} updated.
 mail.updateStudy.body=We are happy to inform you that your study ({0}) has been successfully updated. The public release date was set to {1}.\n\nMany thanks for your time and effort. You can access your study here\: {2}{0}.
 mail.publicReleaseDate.subject=Public release date of {0} updated.
