Reindex can now work for a single study. The URL is '/reindex?study=MTBLSx'. If no paramters are passed, '/reindex' this will reindex all studies in loop one by one. '/reindexall' now reindexs all studies at once. Other code cleanups.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1354 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -198,6 +198,7 @@ msg.noStudyFound=Hmmm... We could not find the study you requested
 msg.studyAccessRestricted=This is a PRIVATE study, you are not Authorised to view this study.
 msg.nothingFoundPersonal=You currently have no studies in MetaboLights. If you would like to submit some studies now go to our <a href="submittoqueue">Submit</a> page
 msg.indexed=Database indexed.
+msg.studyIndexed=Study indexed.
 msg.wsdl.error=The website is currently down. Please try after some time.
 msg.notindexed=You must be logged in as a curator to reindex.
 msg.showing=showing
