--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -60,6 +60,7 @@ label.searchFilter=Filter your results
 label.publicDate=Select the public release date
 label.makestudypublic=Update release date
 label.updatestudy=Resubmit study
+lebel.publictoprivate=Make study private
 label.deleteStudy=Delete study
 label.viewMySubmissions=View my submissions
 label.submitNewStudy=Submit a new study
@@ -85,6 +86,7 @@ label.paramHeader=MetaboLights Parameters
 label.paramName=Parameter Name
 label.paramValue=Parameter Value
 label.submittedId=Submitters original identifier
+UpdatePTPFailed=Updating study from public to private FAILED in
 
 title.serviceName=MetaboLights
 title.download=Download
@@ -215,6 +217,7 @@ msg.makestudypublic.msg=This will update the public release date of the study. I
 # msg.makestudypublic.ok.title=Public release date updated
 # msg.makestudypublic.ok.msg= Your study's public release date has been updated.
 msg.updatestudy.title=Update study ({0}): {1}
+msg.makeStudyPrivatestudy.title=Make study private ({0}): {1}
 msg.updatestudy.msg=Thanks for updating your study! We currently do not provide an online update facility. You will need to use the <a href="http://www.isa-tools.org/">ISAcreator</a> software suite to update your study. You can download your study on the download button provided and load it into your ISACreator. We have created a <a href="help">step-by-step guide</a> to help you.
 # msg.updatestudy.ok.title=Study {0} updated.
 # msg.updatestudy.ok.msg=Congratulations\! You have updated the study {0}.
