Added * to the user queries. Few more changes
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1387 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -60,7 +60,7 @@ label.searchFilter=Filter your results
 label.publicDate=Select the public release date
 label.makestudypublic=Update release date
 label.updatestudy=Resubmit study
-lebel.publictoprivate=Make study private
+label.publictoprivate=Make study private
 label.deleteStudy=Delete study
 label.viewMySubmissions=View my submissions
 label.submitNewStudy=Submit a new study
