- Notify submitters and curators of studies going public - Let curators remove studies submitted by others
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1411 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -208,6 +208,7 @@ msg.to=to
 msg.emailSent=Message Sent
 # msg.emailContactUsFrom=Message from MetaboLights website
 msg.emailContactUsTo=Message to the MetaboLights team
+msg.studySoonLive=Good news! \n\nThis is just a reminder that your study {0} will be publicly available on the {1}.\n\nKind Regards,\n The MetaboLights Team
 msg.welcomeWithStudies=Hi {0}, you have {1} studie(s).
 msg.welcomeWithoutStudies=Hi {0}! You''ve not submitted any studies yet.
 # msg.submitted=You've submitted
