Reindex studies in configurations page. For configuring individual studies, go to study health tab and click on individual study. To reindex studies one-by-one or to reindex all studies at once, go to Reindex Studies tab and choose the option.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1424 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -247,6 +247,7 @@ msg.T&CAcceptance=I understand that all public data is freely available by any i
 msg.T&Cinvalid=You must accept EBI terms and conditions.
 msg.trainOnline=A quick introduction to MetaboLights is also available on  <a href="http://www.ebi.ac.uk/training/online/course/metabolights-quick-tour/what-metabolights">EBI Train Online</a>&nbsp;<a href="http://www.ebi.ac.uk/training/online/course/metabolights-quick-tour/what-metabolights"><span class="icon icon-generic" data-icon="T" id="trainonline"/></a>
 msg.about.cosmos=Coordinated by <a href="http://www.ebi.ac.uk/about/people/christoph-steinbeck/">Dr Christoph Steinbeck</a> of the EMBL-European Bioinformatics Institute, COSMOS (Coordination of Standards in Metabolomics) will bring together European data providers to set and promote community standards that will make it easier to disseminate metabolomics data through life science e-infrastructures. This Coordination Action has been financed with 2 million euros by the European Commission's Seventh Framework Programme.
+msg.studies.reindex=Reindex studies either one by one or all at once with below options:
 
 metaboLights.parameters=MetaboLights Parameters
 metaboLights.parameters.name=Parameter name
