--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -30,7 +30,7 @@ label.userJoinDate=Join date
 label.create=Create
 label.cancel=Cancel
 label.update=Update
-label.releaseDate=Study Public Release Date
+label.releaseDate=Study public release date
 # label.pickReleaseDate=Public Date
 label.subDate=Study Submission Date
 label.expFact=Study Factors
@@ -267,7 +267,7 @@ ebeye.msg.query=Query for entries and domains below:
 # ref.msg.iupac=Name:
 # ref.msg.chebi.name=CHEBI:
 ref.msg.chebi.url=http://www.ebi.ac.uk/chebi/advancedSearchFT.do?searchString=
-ref.msg.mtbl.studies=Studies:
+ref.msg.mtbl.studies=Identified in
 # ref.msg.mtbls.url=http://www.ebi.ac.uk/metabolights/search?freeTextQuery=
 # ref.msg.chebi.image.url=http://www.ebi.ac.uk/chebi/displayImage.do?defaultImage=true&imageIndex=0&chebiId=
 ref.msg.technology=Technology
