Email template changed from msg.properties file to a txt file. Easy to manipulate.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1450 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -184,7 +184,7 @@ msg.passwordResetNotification=You ({0}) have requested to reset your password fo
 msg.updatedAccount=You have successfully updated your account
 msg.verifiedAccount=You have successfully verified your account
 msg.activatedAccount=You have successfully activated the account
-msg.accountActive=\n\nYour new MetaboLights account "{0}" has been activated.\
+msg.accountActive.old=\n\nYour new MetaboLights account "{0}" has been activated.\
 \n\nYou can now use this account to submit data to the MetaboLights repository.\
 \n\n\nKind regards,\
 \nThe MetaboLights Team
