--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -1,3 +1,13 @@
+#
+# EBI MetaboLights - http://www.ebi.ac.uk/metabolights
+# Cheminformatics and Metabolism group
+#
+# Last modified: 09/09/13 11:03
+# Modified by:   kenneth
+#
+# Copyright 2013 - European Bioinformatics Institute (EMBL-EBI), European Molecular Biology Laboratory, Wellcome Trust Genome Campus, Hinxton, Cambridge CB10 1SD, United Kingdom
+#
+
 # Form labels
 # label.footer=&copy; EMBL EBI
 # label.username=Account
@@ -18,7 +28,7 @@ label.email=Email address
 # label.remind=Remind me
 label.resetPw=Reset password
 label.oopsForgot=Forgot your password?
-label.userName=Email Address 
+label.userName=Email Address
 label.needNewAccount=Create a new account
 label.firstName=First name(s)
 label.lastName=Last name
@@ -121,7 +131,7 @@ menu.parameters=parameters
 msg.metabolights=MetaboLights: a database for metabolomics experiments and derived information
 msg.metabolightsAbout=<a href="about">About MetaboLights.</a>
 msg.metabolightsAbout1=MetaboLights is a database for Metabolomics experiments and derived information.  The database is cross-species, cross-technique and covers metabolite structures and their reference spectra as well as their biological roles, locations and concentrations, and experimental data from metabolic experiments.
-msg.metabolightsAbout2=We will provide search services around spectral similarities and chemical structures.  
+msg.metabolightsAbout2=We will provide search services around spectral similarities and chemical structures.
 msg.metabolightsAbout3=We offer user-submission tools and have strong reporting capabilities. We will utilise and further develop de-facto standard formats where various components are encapsulated, such as the encoded spectral and chromatographic data, and associated information about the chemical structure, as well as metadata describing assays and the study as a whole.
 msg.metabolightsAbout4=MetaboLights semantic quality will be based on various controlled vocabularies linking data to existing resources such as <a href="http://www.brenda-enzymes.org/">BRENDA</a> (tissue ontology) and other established ontologies. We are dedicated to collaborate closely with major parties in world-wide metabolomics communities, such as the <a href="http://www.metabolomicssociety.org/">Metabolomics Society</a> and the associated Metabolomics Standards Initiative (MSI).
 msg.metabolightsAbout5=The development of MetaboLights is funded by the BBSRC, grant reference <a href="http://www.bbsrc.ac.uk/pa/grants/AwardDetails.aspx?FundingReference=BB/I000933/1">BB/I000933/1</a>.<br/>The funding is for a project that will instantiate, at the European Bioinformatics Institute (EBI) in Hinxton, Cambridge, UK, the MetaboLights metabolomics database with various different components focused on both data standards and primary experimental data. MetaboLights is cross-species, cross-application and will cover all relevant analytical methods.<br/><br/>MetaboLights is a joint development between the <a href="http://www.ebi.ac.uk/steinbeck/">Steinbeck group</a> at the European Bioinformatics Institute and the <a href="http://www.metabolomics.bioc.cam.ac.uk/metabolomics/">Griffin group</a> in Cambridge.
@@ -136,7 +146,7 @@ msg.metabolightsAbout13=If you want a local copy of the MetaboLights repository,
 msg.metabolightsAbout14=Help topics
 msg.metabolightsAbout15=<p>For submission to <strong>MetaboLights</strong>, we require submissions to be in the ISA-Tab format. This format can be created and edited using a variety of spreadsheet tools.</p><p>We recommend two tools in particular for creation of ISA-Tab files and subsequent submission to our repository:</p><ul><li>ISAcreator: a standalone desktop application with a multitude of facilities to enable standards-compliant creation of ISA-Tab. More information is available from http://isa-tools.org; and</li><li>Google Spreadsheets with OntoMaton: OntoMaton is an add-on to Google Spreadsheets enabling ontology search and tagging within the collaborative Google Spreadsheet environment.</li></ul><br/><p>A Google Doc template for MetaboLights submissions will be coming soon</a>.</p><p>OntoMaton is developed and maintained by the <a href="http://isa-tools.org" target="_blank">ISA team</a>. You can find out more about <strong>OntoMaton</strong> from the project page <a href="http://github.com/ISA-tools/OntoMaton" target="_blank">http://github.com/ISA-tools/OntoMaton</a>. </p>
 
-msg.welcome=Welcome 
+msg.welcome=Welcome
 msg.backToMainPage=Back to the main page
 msg.backToSubmitPage=Try submission again?
 msg.invalidSessionHeader=Invalid session
@@ -160,7 +170,7 @@ msg.upload.queueditems=You have currently some studies in the queue waiting to b
 msg.uploaded.ok1=You have successfully uploaded your experiment to MetaboLights.
 msg.uploaded.ok2=Please, bare in mind that we have replaced your identifiers with our unique MetaboLights accession numbers.
 msg.uploaded.ok3=REPLACEMENT DETAILS
-msg.uploaded.ok4= has been replaced with 
+msg.uploaded.ok4= has been replaced with
 msg.uploaded.wrong=There was a problem during the submission process:
 msg.uploaded.checkListTitle=DETAILS
 msg.pwReset=Please fill in your registered email address and we will reset your password.
@@ -179,8 +189,8 @@ msg.step2.accountDetails=<b>Step 2: After your have verified your email, the Met
 msg.contactUsAndRegards=<BR>In the meantime if you have any questions, <a href="contact">please contact us</a>.<BR><BR>Kind regards,<BR>The MetaboLights Team
 msg.feedbackAccountRequestedBody=Thank you, your account has been provisionally created but still needs to be <b>verified</b>.<BR><BR>You have been sent an email to confirm your request for a new account.<BR><BR>After your confirmation, the <b>MetaboLights team will review the account request</b> and activate your account within one working day.<BR><BR>As soon as your account is activated you will be notified by email. You can then use your account to log in and submit data.<BR>In the meantime if you have any questions, <a href="contact">please contact us</a>.<BR><BR>Kind regards,<BR>The MetaboLights Team
 msg.confirmAccountRequest=\n\nThrough our MetaboLights website (http\://www.ebi.ac.uk/metabolights) we have received a request to create a new account linked to this email address.\n\nPlease click this link to confirm that you have indeed requested this.\n\nThe MetaboLights team will then activate the account within one working day. You will receive an email message notifying you when it is active.  \n\nConfirm\: {0}
-msg.accountRequest=\n\nA new user ({0} {1}) has requested "{2}" to be used for MetaboLights.\nPlease review the user request, and activate the account. \n\nName        \: {0} {1}\nUser id     \: {3} \nEmail       \: {4} \nAffiliation \: {5} \nAff. URL    \: {6}  \nCountry     \: {7}\n\nYou can activate this account (and automatically notify the user) by clicking this link\:\n{8} 
-msg.passwordResetNotification=You ({0}) have requested to reset your password for "MetaboLights". Your new temporary password is\: \n\n{1} \n\nPlease use this to log in and update your account with a new choice of password. 
+msg.accountRequest=\n\nA new user ({0} {1}) has requested "{2}" to be used for MetaboLights.\nPlease review the user request, and activate the account. \n\nName        \: {0} {1}\nUser id     \: {3} \nEmail       \: {4} \nAffiliation \: {5} \nAff. URL    \: {6}  \nCountry     \: {7}\n\nYou can activate this account (and automatically notify the user) by clicking this link\:\n{8}
+msg.passwordResetNotification=You ({0}) have requested to reset your password for "MetaboLights". Your new temporary password is\: \n\n{1} \n\nPlease use this to log in and update your account with a new choice of password.
 msg.updatedAccount=You have successfully updated your account
 msg.verifiedAccount=You have successfully verified your account
 msg.activatedAccount=You have successfully activated the account
@@ -204,7 +214,7 @@ msg.studyIndexed=Study indexed.
 msg.wsdl.error=The website is currently down. Please try after some time.
 msg.notindexed=You must be logged in as a curator to reindex.
 msg.showing=showing
-msg.to=to 
+msg.to=to
 msg.emailSent=Message Sent
 # msg.emailContactUsFrom=Message from MetaboLights website
 msg.emailContactUsTo=Message to the MetaboLights team
@@ -214,7 +224,7 @@ msg.welcomeWithoutStudies=Hi {0}! You''ve not submitted any studies yet.
 # msg.submitted=You've submitted
 msg.studies=studies
 msg.makestudypublic.title=Update {0} study public release date. {1}
-msg.makestudypublic.msg=This will update the public release date of the study. If you decide to make it public, you will allow the MetaboLights community to view it or even download it. 
+msg.makestudypublic.msg=This will update the public release date of the study. If you decide to make it public, you will allow the MetaboLights community to view it or even download it.
 # msg.makestudypublic.ok.title=Public release date updated
 # msg.makestudypublic.ok.msg= Your study's public release date has been updated.
 msg.updatestudy.title=Update study ({0}): {1}
@@ -272,6 +282,7 @@ ref.msg.mtbl.studies=Identified in
 # ref.msg.chebi.image.url=http://www.ebi.ac.uk/chebi/displayImage.do?defaultImage=true&imageIndex=0&chebiId=
 ref.msg.technology=Technology
 ref.msg.organism=Organism
+ref.msg.status=Study status
 ref.msg.searchResult=results found for
 ref.msg.noResultSearch=You can search for a wide range of metabolites. Examples:
 ref.msg.emptyBrowse=results found
