Added Sample tab to study details page. It now contains columns source name, organisms, organisms part, from the Web service.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1547 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -48,6 +48,11 @@ label.expId=Study identifier
 label.subm=Submitted by
 label.expPrivate=Private study
 label.assays=Assays
+label.sourceName=Source Name
+label.organismPart=Organism Part
+label.protocolRef=Protocol Reference
+label.sampleName=Sample Name
+
 # label.pubBy=Publication by
 # label.pubIn=See publication
 # label.metaboLightsEntry=MetaboLights Entry
@@ -80,6 +85,8 @@ label.updateOldStudySub=Use this option if you like to update a previously submi
 label.studyDesign=Study Design Description
 label.protocols=Protocols
 label.data=Data
+label.assay=Assay
+label.sample=Sample
 label.publications=Publications
 label.organisms=Organism(s)
 label.experimentalFactors=Experimental Factors
