Factors such as 'Gender' and 'Metabolic syndrome' added to the WS and the webapp.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1550 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -52,6 +52,7 @@ label.sourceName=Source Name
 label.organismPart=Organism Part
 label.protocolRef=Protocol Reference
 label.sampleName=Sample Name
+label.factor=Factor
 
 # label.pubBy=Publication by
 # label.pubIn=See publication
