--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -2,7 +2,7 @@
 # EBI MetaboLights - http://www.ebi.ac.uk/metabolights
 # Cheminformatics and Metabolism group
 #
-# Last modified: 18/10/13 09:20
+# Last modified: 18/10/13 11:49
 # Modified by:   kenneth
 #
 # Copyright 2013 - European Bioinformatics Institute (EMBL-EBI), European Molecular Biology Laboratory, Wellcome Trust Genome Campus, Hinxton, Cambridge CB10 1SD, United Kingdom
@@ -171,8 +171,9 @@ msg.submCredentialsShort=Welcome to MetaboLights study submission
 msg.submHeader=In order to submit or update studies you need to log in or <a href="newAccount">create an account</a>
 msg.error.general=There was an unexpected error.<br/>
 msg.upload=A brand new study
-msg.upload.desc=Thanks for choosing to submit a new study to MetaboLights. We use the <a href="http://www.isa-tools.org/">ISA-Tab</a> zip archive as a submission format in MetaboLights. We know that compiling your study information can be complicated so we have written a <a href="help">step-by-step guide</a> to help you.<BR/><BR/>Once you have used the <a href="help">guide</a> to compile your ISATab archive file you can upload it using the file uploader below.
-msg.upload.desc2=Go to <a href="help">How to submit to MetaboLights</a> guide.
+msg.upload.desc=Thanks for choosing to submit a new study to MetaboLights. We use the <a href="http://www.isa-tools.org/">ISA-Tab</a> zip archive as a submission format in MetaboLights. We know that compiling your study information can be complicated so we have written a <a href="help">step-by-step guide</a> to help you.<BR/><BR/>Once you have used the <a href="help">"How to submit to MetaboLights"</a> to create your valid ISATab archive file, you can upload it using the file uploader below.
+msg.upload.desc2=Here is the link to the <a href="help">"How to submit to MetaboLights"</a> guide.
+msg.upload.desc3=<b>IMPORTANT</b>: Please ensure your study has passed ISAcreator validation prior to submitting to MetaboLights. This validation is available in ISACreator, under "file","Validate ISAtab"
 msg.upload.notValid=Please provide a valid file name..
 msg.upload.queueditems=You have currently some studies in the queue waiting to be processed. <b>Please, wait for your previous studies to be processed before submitting a new one.</b>
 msg.uploaded.ok1=You have successfully uploaded your experiment to MetaboLights.
