Model, AssayList to a hash with index as a key, get rid of formedURL property, not needed. DAO, load multiple assays even with missing fields (MTBLS2, MTBLS20) Webservice: serve maf file using study/MTBLS1/assay/1/maf, old method removed Web app: Adapt entry2 to show one assay per tab, to try it.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1581 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -47,7 +47,7 @@ label.expFact=Study Factors
 label.expId=Study identifier
 label.subm=Submitted by
 label.expPrivate=Private study
-label.assays=Assays
+label.assays=Assay
 label.sourceName=Source Name
 label.organismPart=Organism Part
 label.protocolRef=Protocol Reference
@@ -401,3 +401,6 @@ label.metabolites.retentiontime=Retention time
 label.metabolites.mz=m/z
 submittedFile=download file
 label.onBehalf=On behalf of
+label.measurement=Measurement
+label.assayName=Assay file name
+label.platform=Platform
