--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -196,7 +196,7 @@ msg.feedbackAccountRequestedDetails=Your account details
 msg.step1.accountDetails=<b>Step 1: Check your email and click on the verification link.</b>
 msg.step2.accountDetails=<b>Step 2: After your have verified your email, the MetaboLights team will activate your account within one working day.</b>
 msg.contactUsAndRegards=<BR>In the meantime if you have any questions, <a href="contact">please contact us</a>.<BR><BR>Kind regards,<BR>The MetaboLights Team
-msg.feedbackAccountRequestedBody=Thank you, your account has been provisionally created but still needs to be <b>verified</b>.<BR><BR>You have been sent an email to confirm your request for a new account.<BR><BR>After your confirmation, the <b>MetaboLights team will review the account request</b> and activate your account within one working day.<BR><BR>As soon as your account is activated you will be notified by email. You can then use your account to log in and submit data.<BR>In the meantime if you have any questions, <a href="contact">please contact us</a>.<BR><BR>Kind regards,<BR>The MetaboLights Team
+msg.feedbackAccountRequestedBody=Thank you, your account has been provisionally created but still needs to be <b>verified</b>.<BR><BR>You have been sent an email to confirm your request for a new account.<BR><BR>After your confirmation, the <b>MetaboLights team will review the account request</b> and activate your account within one working day.<BR><BR>As soon as your account is activated you will be notified by email. You can then use your account to log in and submit data.<BR>In the meantime if you have any questions, <a href="contact">please contact us</a>.<BR><BR>Kind regards,<BR>
 msg.confirmAccountRequest=\n\nThrough our MetaboLights website (http\://www.ebi.ac.uk/metabolights) we have received a request to create a new account linked to this email address.\n\nPlease click this link to confirm that you have indeed requested this.\n\nThe MetaboLights team will then activate the account within one working day. You will receive an email message notifying you when it is active.  \n\nConfirm\: {0}
 msg.accountRequest=\n\nA new user ({0} {1}) has requested "{2}" to be used for MetaboLights.\nPlease review the user request, and activate the account. \n\nName        \: {0} {1}\nUser id     \: {3} \nEmail       \: {4} \nAffiliation \: {5} \nAff. URL    \: {6}  \nCountry     \: {7}\n\nYou can activate this account (and automatically notify the user) by clicking this link\:\n{8}
 msg.passwordResetNotification=You ({0}) have requested to reset your password for "MetaboLights". Your new temporary password is\: \n\n{1} \n\nPlease use this to log in and update your account with a new choice of password.
@@ -227,7 +227,7 @@ msg.to=to
 msg.emailSent=Message Sent
 # msg.emailContactUsFrom=Message from MetaboLights website
 msg.emailContactUsTo=Message to the MetaboLights team
-msg.studySoonLive=Good news! \n\nThis is just a reminder that your study {0} will be publicly available on the {1}.\n\nKind Regards,\n The MetaboLights Team
+msg.studySoonLive=Good news! \n\nThis is just a reminder that your study {0} will be publicly available on the {1}.\n\nKind Regards,
 msg.welcomeWithStudies=Hi {0}, you have {1} studie(s).
 msg.welcomeWithoutStudies=Hi {0}! You''ve not submitted any studies yet.
 # msg.submitted=You've submitted
