--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -2,7 +2,7 @@
 # EBI MetaboLights - http://www.ebi.ac.uk/metabolights
 # Cheminformatics and Metabolism group
 #
-# Last modified: 18/10/13 11:49
+# Last modified: 24/10/13 14:08
 # Modified by:   kenneth
 #
 # Copyright 2013 - European Bioinformatics Institute (EMBL-EBI), European Molecular Biology Laboratory, Wellcome Trust Genome Campus, Hinxton, Cambridge CB10 1SD, United Kingdom
@@ -67,7 +67,7 @@ label.description=Description
 label.design=Design(s)
 # label.properties=Propertie(s)
 # label.sampleAttr=Sample Attribute(s)
-label.contact=Contact us
+label.contact=Please give us feedback, we are always looking at ways to improve MetaboLights
 label.message=Message to the MetaboLights team
 # label.aboutMetab=About MetaboLights
 label.ftpDownload=Download: Experiment
