--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -2,7 +2,7 @@
 # EBI MetaboLights - http://www.ebi.ac.uk/metabolights
 # Cheminformatics and Metabolism group
 #
-# Last modified: 24/10/13 14:08
+# Last modified: 24/10/13 14:26
 # Modified by:   kenneth
 #
 # Copyright 2013 - European Bioinformatics Institute (EMBL-EBI), European Molecular Biology Laboratory, Wellcome Trust Genome Campus, Hinxton, Cambridge CB10 1SD, United Kingdom
@@ -97,7 +97,7 @@ label.metabolites=Metabolites Identified
 label.metabolites.identifier=Identifier
 label.metabolites.description=Description
 label.metabolites.formula=Formula
-label.sourceforge=Please use our <a href="http://sourceforge.net/tracker/?group_id=504460/">problem tracker</a> if you have found a bug or have any suggestions for enhanced or new functionality
+label.sourceforge=Please use our <a href="http://sourceforge.net/tracker/?group_id=504460/">problem tracker</a> if you have found a bug or have any other suggestions for enhanced or new functionality
 label.ebiContact=You can also contact us using the global <a href="http://www.ebi.ac.uk/support/metabolights">EBI Support & Feedback form</a>
 label.stats=Statistics
 label.paramHeader=MetaboLights Parameters
