Add accordion to show the MAF data.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1590 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -404,3 +404,4 @@ label.onBehalf=On behalf of
 label.measurement=Measurement
 label.assayName=Assay file name
 label.platform=Platform
+label.mafFileFound=There are metabolites identified\!\!
