--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -2,7 +2,7 @@
 # EBI MetaboLights - http://www.ebi.ac.uk/metabolights
 # Cheminformatics and Metabolism group
 #
-# Last modified: 24/10/13 14:26
+# Last modified: 04/11/13 15:57
 # Modified by:   kenneth
 #
 # Copyright 2013 - European Bioinformatics Institute (EMBL-EBI), European Molecular Biology Laboratory, Wellcome Trust Genome Campus, Hinxton, Cambridge CB10 1SD, United Kingdom
@@ -75,7 +75,7 @@ label.ftpDownload=Download: Experiment
 label.searchFilter=Filter your results
 label.publicDate=Select the public release date
 label.makestudypublic=Update release date
-label.updatestudy=Resubmit study
+label.updatestudy=Update study
 label.publictoprivate=Make study private
 label.deleteStudy=Delete study
 label.viewMySubmissions=View my submissions
