Avoid sending lots of spaces and tab (jsp) New Species page PROTOTYPE (working with STATIC real data....not reaching species level) Links to model organisms doesn't work since search page has a bug when passing arguments.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1640 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -405,3 +405,7 @@ label.measurement=Measurement
 label.assayName=Assay file name
 label.platform=Platform
 label.mafFileFound=There are metabolites identified\!\!
+menu.speciespageheader=Species selection page
+menu.speciespagedescription=See bellow direct links to some common model organisms and a wider list of all the organisms we have some information about.
+menu.speciesmodeltitle=Shortcuts to ...
+menu.speciesbrowsetitle=Not as short
